--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,6 @@ html {
     font-style: bold;
     font-weight: 800;
     height: 100vh;
-    opacity: 0.95;
     width: 100vw;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -113,7 +112,7 @@ p {
 #header-quote {
     font-size: 2.7rem;
     font-style: italic;
-    font-weight: 400;
+    font-weight: 500;
     margin: 0 auto 2%;
     width: 100%;
 }
@@ -172,7 +171,7 @@ p {
     height: 80%;
     justify-content: space-evenly;
     margin: 1% auto;
-    overflow: auto;
+    overflow: scroll;
     width: 100%;
 }
 
